update baitap stream api